Import of ANDYA/Set-IntSpan-Fast-v0.0.2 from CPAN.
gitpan-cpan-distribution: Set-IntSpan-Fast
gitpan-cpan-version:      v0.0.2
gitpan-cpan-path:         ANDYA/Set-IntSpan-Fast-v0.0.2.tar.gz
gitpan-cpan-author:       ANDYA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,3 +3,5 @@ Revision history for Set-IntSpan-Fast
 0.0.1   2006-12-22
         Initial release.
 
+0.0.2   2006-12-22
+        Version bump to force CPAN update.
