--- a/Changes
+++ b/Changes
@@ -7,4 +7,7 @@ Revision history for Set-IntSpan-Fast
         Version bump to force CPAN update.
         
 0.0.3   2006-12-30
+        Various tidying up. Nothing serious.
         
+0.0.4   2007-01-16
+        Improved test coverage.
