--- a/Changes
+++ b/Changes
@@ -11,3 +11,6 @@ Revision history for Set-IntSpan-Fast
         
 0.0.4   2007-01-16
         Improved test coverage.
+
+0.0.5   2007-01-16
+        And now actually including the tests. Doh.
