Import of ANDYA/Set-IntSpan-Fast-v0.0.6 from CPAN.
gitpan-cpan-distribution: Set-IntSpan-Fast
gitpan-cpan-version:      v0.0.6
gitpan-cpan-path:         ANDYA/Set-IntSpan-Fast-v0.0.6.tar.gz
gitpan-cpan-author:       ANDYA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -14,3 +14,7 @@ Revision history for Set-IntSpan-Fast
 
 0.0.5   2007-01-16
         And now actually including the tests. Doh.
+
+0.0.6   2007-02-23
+        Added machine readable licence.
+        
