--- a/Changes
+++ b/Changes
@@ -18,3 +18,6 @@ Revision history for Set-IntSpan-Fast
 0.0.6   2007-02-23
         Added machine readable licence.
         
+0.0.7   2007-05-19
+        Added add_from_string, remove_from_string. Thanks to K. J.
+        Cheetham
