Import of ANDYA/Set-IntSpan-Fast-v1.0 from CPAN.
gitpan-cpan-distribution: Set-IntSpan-Fast
gitpan-cpan-version:      v1.0
gitpan-cpan-path:         ANDYA/Set-IntSpan-Fast-v1.0.tar.gz
gitpan-cpan-author:       ANDYA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -28,3 +28,6 @@ Revision history for Set-IntSpan-Fast
 
 0.0.9   2007-05-19
         Make it possible to pass args to constructor.
+
+1.0     2007-05-22
+        Fixed use constants for 5.6.2 compatibility
