--- a/Changes
+++ b/Changes
@@ -31,3 +31,15 @@ Revision history for Set-IntSpan-Fast
 
 1.0     2007-05-22
         Fixed use constants for 5.6.2 compatibility
+
+1.0.1   2007-07-17
+        Added clipping option to cardinality, iterate_runs. Thanks to Jeffrey
+        Roenfeld for the suggestion.
+        Messed around with version numbering some more.
+
+1.10    2007-11-27
+        POD tidying.
+        Added contains_all_range. See 30988. Thanks to Kevin Ryde for
+        the suggestion.
+        Removed version.pm dependency.
+    
