Import of ANDYA/Set-IntSpan-Fast-1.15 from CPAN.
gitpan-cpan-distribution: Set-IntSpan-Fast
gitpan-cpan-version:      1.15
gitpan-cpan-path:         ANDYA/Set-IntSpan-Fast-1.15.tar.gz
gitpan-cpan-author:       ANDYA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -55,3 +55,7 @@ Revision history for Set-IntSpan-Fast
 
 1.14    2008-07-01
         Improved test coverage when ::XS is already installed
+
+1.15    2008-12-09
+        Added empty method.
+
